tests/neg-custom-args/captures/cc-poly-2.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/cc-poly-2.scala:14:19 ------------------------------------
14 |    f[CapSet^{c1}](d) // error
   |                   ^
   |                   Found:    (d : Test.D^)
   |                   Required: Test.D^{c1}
   |
   |                   Note that capability `d` cannot flow into capture set {c1}.
   |
   |                   where:    ^ refers to a root capability in the type of value d
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/cc-poly-2.scala:16:20 ------------------------------------
16 |    val _: D^{c1} = x // error
   |                    ^
   |                    Found:    (x : Test.D^{d})
   |                    Required: Test.D^{c1}
   |
   |                    Note that capability `x` cannot flow into capture set {c1}.
   |
   | longer explanation available when compiling with `-explain`
